--- a/server/src/client/index.html
+++ b/server/src/client/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
 <div>Hello from index.html</div>
-<p><img src="http://localhost:8081/api/image/1"/></p>
+<p><img src="http://localhost:8081/api/image/"/></p>
